ckfinder deobfuscated... still doesn't work in IE

--- a/OneMainWeb/ckfinder/ckfinder.html
+++ b/OneMainWeb/ckfinder/ckfinder.html
@@ -3,7 +3,7 @@
 <head>
 	<title>CKFinder 2</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<script type="text/javascript" src="ckfinder.js"></script>
+	<script type="text/javascript" src="ckfinder1.js"></script>
 	<style type="text/css">
 		body, html, iframe, #ckfinder {
 			margin: 0;
